Blender crashes on UV transformation. #57571

Closed
opened 2018-11-01 23:06:01 +01:00 by Benno Doerr · 10 comments

system-info.txt

BladeTexture.png

sword.blend

System Information
Arch (newest updates)
Nvidia Gtx 1060 with proprietary drivers.
More info in the system-info.txt outputed by blender.

Blender Version
2.8 sub26

Short description of error
Blender crashes on UV transformation.

Exact steps for others to reproduce the error
When opening the project, the UV editor should be open. Just try to resize the selected UVs (all except the one for the blade).
Blender will crash within ms (while resizing). If you are fast and finish the resizing nearly instantly, blender will resize successfully and will not crash.
The same can be archieved with translating the UVs, but not as fast.

I didn't see the bug reported and I am very new to Blender so my project might just be messed up because i did something stupid? But i guess a crash shouldn't be the
result in any case.

Benno D.

[system-info.txt](https://archive.blender.org/developer/F5329593/system-info.txt) ![BladeTexture.png](https://archive.blender.org/developer/F5329597/BladeTexture.png) [sword.blend](https://archive.blender.org/developer/F5329596/sword.blend) **System Information** Arch (newest updates) Nvidia Gtx 1060 with proprietary drivers. More info in the system-info.txt outputed by blender. **Blender Version** 2.8 sub26 **Short description of error** Blender crashes on UV transformation. **Exact steps for others to reproduce the error** When opening the project, the UV editor should be open. Just try to resize the selected UVs (all except the one for the blade). Blender will crash within ms (while resizing). If you are fast and finish the resizing nearly instantly, blender will resize successfully and will not crash. The same can be archieved with translating the UVs, but not as fast. I didn't see the bug reported and I am very new to Blender so my project might just be messed up because i did something stupid? But i guess a crash shouldn't be the result in any case. Benno D.
Author

Added subscriber: @BennoD

Added subscriber: @BennoD
Author

here is the crash log:
sword.crash.txt

and i'll build the newest blender version to test on that.

Benno D.

here is the crash log: [sword.crash.txt](https://archive.blender.org/developer/F5329709/sword.crash.txt) and i'll build the newest blender version to test on that. Benno D.
Author

Ok now i am confused. Either i am not able to use the tool, which might be entirely possible because as i said i'm new to this, or my project can't be used correctly on the newest version of Blender.
When i open it the UVs are no longer selected, and i can't even create new ones. There is no highlighting for the UVs and no menus for synchronization and things like that.
When i make a new project it works without a problem.

blender.png

system-info.txt

So i guess this might be an outdated error and this post can be deleted?
Can i fix my project somehow though? Or am i just using something wrong.
I totally understand though if this is not the right place for question like this and i have to ask somewhere else then.

Benno D.

Ok now i am confused. Either i am not able to use the tool, which might be entirely possible because as i said i'm new to this, or my project can't be used correctly on the newest version of Blender. When i open it the UVs are no longer selected, and i can't even create new ones. There is no highlighting for the UVs and no menus for synchronization and things like that. When i make a new project it works without a problem. ![blender.png](https://archive.blender.org/developer/F5329917/blender.png) [system-info.txt](https://archive.blender.org/developer/F5329916/system-info.txt) So i guess this might be an outdated error and this post can be deleted? Can i fix my project somehow though? Or am i just using something wrong. I totally understand though if this is not the right place for question like this and i have to ask somewhere else then. Benno D.
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-02 11:18:33 +01:00
Member

In 2.8 there is a dedicated UV Edit mode for the Image Editor. Choose UV Edit instead of View in the Image Editor header top left.
This way you can see and edit your UVs.

Regarding the crash, I get them with varying backtraces [for me, they dont happen instantly, but wiggeling the mouse back and forth while scaling/translating triggers crashes pretty consistently].

Note: running blender with --thread 1 seems to solve (wasnt able to crash it at all then...)

@Sergey : looks like another one for you?

1 GPU_batch_vao_cache_clear gpu_batch.c         52   0x248dc05 
2 gpu_batch_presets_reset   gpu_batch_presets.c 242  0x24903da 
3 view3d_main_region_draw   view3d_draw.c       1317 0x1a80841 
4 ED_region_do_draw         area.c              529  0x1f07e87 
5 wm_draw_window_offscreen  wm_draw.c           546  0x19421ef 
6 wm_draw_window            wm_draw.c           672  0x1942787 
7 wm_draw_update            wm_draw.c           826  0x1942c8e 
8 WM_main                   wm.c                418  0x193fc18 
9 main                      creator.c           525  0x193a9d1 
1   BLI_remlink listbase.c 135  0x2b75c5c 
2   gpu_batch_presets_unregister gpu_batch_presets.c 228  0x2490379 
3   mesh_batch_cache_discard_uvedit draw_cache_impl_mesh.c 2203 0x24c747a 
4   mesh_batch_cache_clear                                                 draw_cache_impl_mesh.c    2382 0x24c87b1 
5   DRW_mesh_batch_cache_free                                                                                                                                                                             draw_cache_impl_mesh.c    2398 0x24c88db 
6   BKE_mesh_batch_cache_free                                                                                                                                                                             mesh_runtime.c            226  0x27c6baa 
7   BKE_mesh_runtime_clear_cache                                                                                                                                                                          mesh_runtime.c            65   0x27c632b 
8   BKE_mesh_free                                                                                                                                                                                         mesh.c                    470  0x27a32fc 
9   BKE_libblock_free_datablock                                                                                                                                                                           library_remap.c           703  0x2785b24 
10  DEG::deg_free_copy_on_write_datablock                                                                                                                                                                 deg_eval_copy_on_write.cc 1007 0x2c056ec 
11  DEG::deg_update_copy_on_write_datablock                                                                                                                                                               deg_eval_copy_on_write.cc 871  0x2c05383 
12  DEG::deg_evaluate_copy_on_write                                                                                                                                                                       deg_eval_copy_on_write.cc 1024 0x2c05777 
13  std::__invoke_impl<void, void ( *&)(Depsgraph *, DEG::IDDepsNode const *), Depsgraph *, DEG::IDDepsNode *&>                                                                                           invoke.h                  60   0x2bf344f 
14  std::__invoke<void ( *&)(Depsgraph *, DEG::IDDepsNode const *), Depsgraph *, DEG::IDDepsNode *&>                                                                                                      invoke.h                  95   0x2bf2015 
15  std::_Bind<void ( *(std::_Placeholder<1>, DEG::IDDepsNode *))(Depsgraph *, DEG::IDDepsNode const *)>::__call<void, Depsgraph *&&, 0ul, 1ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul>) functional                400  0x2bf0c05 
16  std::_Bind<void ( *(std::_Placeholder<1>, DEG::IDDepsNode *))(Depsgraph *, DEG::IDDepsNode const *)>::operator()<Depsgraph *, void>(Depsgraph *&&)                                                    functional                484  0x2beeb8b 
17  std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, DEG::IDDepsNode *))(Depsgraph *, DEG::IDDepsNode const *)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&)     std_function.h            297  0x2bebd4f 
18  std::function<void (Depsgraph *)>::operator()(Depsgraph *) const                                                                                                                                      std_function.h            687  0x2c039dd 
19  DEG::deg_task_run_func                                                                                                                                                                                deg_eval.cc               94   0x2c03170 
20  task_scheduler_thread_run                                                                                                                                                                             task.c                    441  0x2bc7102                                                                                                                                                                                                                                          
                                                                                                                                                                                                                                
1  pthread_mutex_lock                                 0x7ffff4ccbda4 
2  __gthread_mutex_lock      gthr-default.h      748  0x24970c9      
3  std::mutex::lock          std_mutex.h         103  0x249711a      
4  orphans_add               gpu_context.cpp     102  0x249631f      
5  GPU_vao_free              gpu_context.cpp     242  0x2496bff      
6  GPU_batch_vao_cache_clear gpu_batch.c         70   0x248dd42      
7  gpu_batch_presets_reset   gpu_batch_presets.c 242  0x24903da      
8  view3d_main_region_draw   view3d_draw.c       1317 0x1a80841      
9  ED_region_do_draw         area.c              529  0x1f07e87      
10 wm_draw_window_offscreen  wm_draw.c           546  0x19421ef      
11 wm_draw_window            wm_draw.c           672  0x1942787      
12 wm_draw_update            wm_draw.c           826  0x1942c8e      
13 WM_main                   wm.c                418  0x193fc18      
14 main                      creator.c           525  0x193a9d1      
In 2.8 there is a dedicated UV Edit mode for the Image Editor. Choose `UV Edit` instead of `View` in the Image Editor header top left. This way you can see and edit your UVs. Regarding the crash, I get them with varying backtraces [for me, they dont happen instantly, but wiggeling the mouse back and forth while scaling/translating triggers crashes pretty consistently]. Note: running blender with `--thread 1` seems to solve (wasnt able to crash it at all then...) @Sergey : looks like another one for you? ``` 1 GPU_batch_vao_cache_clear gpu_batch.c 52 0x248dc05 2 gpu_batch_presets_reset gpu_batch_presets.c 242 0x24903da 3 view3d_main_region_draw view3d_draw.c 1317 0x1a80841 4 ED_region_do_draw area.c 529 0x1f07e87 5 wm_draw_window_offscreen wm_draw.c 546 0x19421ef 6 wm_draw_window wm_draw.c 672 0x1942787 7 wm_draw_update wm_draw.c 826 0x1942c8e 8 WM_main wm.c 418 0x193fc18 9 main creator.c 525 0x193a9d1 ``` ``` 1 BLI_remlink listbase.c 135 0x2b75c5c 2 gpu_batch_presets_unregister gpu_batch_presets.c 228 0x2490379 3 mesh_batch_cache_discard_uvedit draw_cache_impl_mesh.c 2203 0x24c747a 4 mesh_batch_cache_clear draw_cache_impl_mesh.c 2382 0x24c87b1 5 DRW_mesh_batch_cache_free draw_cache_impl_mesh.c 2398 0x24c88db 6 BKE_mesh_batch_cache_free mesh_runtime.c 226 0x27c6baa 7 BKE_mesh_runtime_clear_cache mesh_runtime.c 65 0x27c632b 8 BKE_mesh_free mesh.c 470 0x27a32fc 9 BKE_libblock_free_datablock library_remap.c 703 0x2785b24 10 DEG::deg_free_copy_on_write_datablock deg_eval_copy_on_write.cc 1007 0x2c056ec 11 DEG::deg_update_copy_on_write_datablock deg_eval_copy_on_write.cc 871 0x2c05383 12 DEG::deg_evaluate_copy_on_write deg_eval_copy_on_write.cc 1024 0x2c05777 13 std::__invoke_impl<void, void ( *&)(Depsgraph *, DEG::IDDepsNode const *), Depsgraph *, DEG::IDDepsNode *&> invoke.h 60 0x2bf344f 14 std::__invoke<void ( *&)(Depsgraph *, DEG::IDDepsNode const *), Depsgraph *, DEG::IDDepsNode *&> invoke.h 95 0x2bf2015 15 std::_Bind<void ( *(std::_Placeholder<1>, DEG::IDDepsNode *))(Depsgraph *, DEG::IDDepsNode const *)>::__call<void, Depsgraph *&&, 0ul, 1ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul>) functional 400 0x2bf0c05 16 std::_Bind<void ( *(std::_Placeholder<1>, DEG::IDDepsNode *))(Depsgraph *, DEG::IDDepsNode const *)>::operator()<Depsgraph *, void>(Depsgraph *&&) functional 484 0x2beeb8b 17 std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, DEG::IDDepsNode *))(Depsgraph *, DEG::IDDepsNode const *)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&) std_function.h 297 0x2bebd4f 18 std::function<void (Depsgraph *)>::operator()(Depsgraph *) const std_function.h 687 0x2c039dd 19 DEG::deg_task_run_func deg_eval.cc 94 0x2c03170 20 task_scheduler_thread_run task.c 441 0x2bc7102 ``` ``` ``` ``` 1 pthread_mutex_lock 0x7ffff4ccbda4 2 __gthread_mutex_lock gthr-default.h 748 0x24970c9 3 std::mutex::lock std_mutex.h 103 0x249711a 4 orphans_add gpu_context.cpp 102 0x249631f 5 GPU_vao_free gpu_context.cpp 242 0x2496bff 6 GPU_batch_vao_cache_clear gpu_batch.c 70 0x248dd42 7 gpu_batch_presets_reset gpu_batch_presets.c 242 0x24903da 8 view3d_main_region_draw view3d_draw.c 1317 0x1a80841 9 ED_region_do_draw area.c 529 0x1f07e87 10 wm_draw_window_offscreen wm_draw.c 546 0x19421ef 11 wm_draw_window wm_draw.c 672 0x1942787 12 wm_draw_update wm_draw.c 826 0x1942c8e 13 WM_main wm.c 418 0x193fc18 14 main creator.c 525 0x193a9d1 ```
Author

In 2.8 there is a dedicated UV Edit mode for the Image Editor. Choose UV Edit instead of View in the Image Editor header top left. This way you can see and edit your UVs.

Note: running blender with --thread 1 seems to solve (wasnt able to crash it at all then...)

Helps alot, thanks.

> In 2.8 there is a dedicated UV Edit mode for the Image Editor. Choose UV Edit instead of View in the Image Editor header top left. This way you can see and edit your UVs. > Note: running blender with --thread 1 seems to solve (wasnt able to crash it at all then...) Helps alot, thanks.
Sergey Sharybin removed their assignment 2018-11-02 12:47:04 +01:00
Clément Foucault was assigned by Sergey Sharybin 2018-11-02 12:47:04 +01:00

@lichtwerk, nothing i can do. The batch API should finally become aware that it might be used from a non-main thread, and also that it can be used from multiple threads.

Note: global lock would be considered VERY BAD idea since those leads to a dramatic drop in scalability and performance on multi-core machines.

@lichtwerk, nothing i can do. The batch API should finally become aware that it might be used from a non-main thread, and also that it can be used from multiple threads. Note: global lock would be considered VERY BAD idea since those leads to a dramatic drop in scalability and performance on multi-core machines.

@Sergey This is already the case. The problem was the thread safety of gpu_batch_presets_register/unregister().

Talking about performance, it's only a problem for UV editing and I don't think users will edit thousands of objects. Moreover it's already doing locking for the VAOs discarding which would happen whatsoever.

@Sergey This is already the case. The problem was the thread safety of gpu_batch_presets_register/unregister(). Talking about performance, it's only a problem for UV editing and I don't think users will edit thousands of objects. Moreover it's already doing locking for the VAOs discarding which would happen whatsoever.

This issue was referenced by d941f40c21

This issue was referenced by d941f40c21f9b7eae861914db5b24427413044c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57571
No description provided.